Fix all compilation warnings and code quality issues
- Remove unused imports across 40+ files
- Add @SuppressWarnings annotations for reserved/planned fields
- Fix deprecated API usage (URL constructor -> URI.create().toURL())
- Fix varargs type safety warnings in GUI components
- Add missing switch case for STOPPED state in AdvancedQueueManager
- Remove unused test integration files with invalid imports
- Add comprehensive unit tests in new unit/ test package
- 797 tests passing, BUILD SUCCESS